# ninja-practice

./: .env.example  .gitignore  README.md  pyproject.toml
src/account/: api.py  managers.py  models.py  schemas.py
src/account/default_data/: user.yaml
src/account/migrations/: 0001_initial.py  0002_add_is_superuser_field.py
src/auth/: api.py  permissions.py  schemas.py  security.py  token.py
src/core/: api.py  config.py  errcode.py  exceptions.py  logging.py  paginations.py  responses.py  settings.py  urls.py
